apps/kubernetes/k3s/_sunset/netbootxyz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-ui
  namespace: netbootxyz
spec:
  selector:
    app: netbootxyz
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-tftp
  namespace: netbootxyz
  annotations:
    metallb.universe.tf/allow-shared-ip: netbootxyz
spec:
  type: LoadBalancer
  selector:
    app: netbootxyz
  ports:
    - name: tftp
      port: 69
      targetPort: 69
      protocol: UDP
