apps/kubernetes/k3s/_sunset/netbootxyz/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbootxyz
  namespace: netbootxyz
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netboot.hughboi.vip`)
      kind: Rule
      services:
        - name: netbootxyz-ui
          port: 3000
  tls:
    secretName: hughboi-tls
